--- a/style.css
+++ b/style.css
@@ -211,57 +211,50 @@ header {
 .background_picture {
   background: url(/img/81ded9cceb38ed3d73dfb9cbbabec2d1\ 1.png);
   width: 119rem;
-  height: 180rem;
+  height: 165rem;
 }
 
-.slider {
-  margin-top: 1.875rem;
+/* Section 3 */
+
+.wrapper {
+  margin-top: 3rem;
+  flex-grow: 1;
+}
+
+.swiper {
   display: flex;
-  justify-content: space-around;
+  max-width: 1389px;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
 }
 
-.arrow_left,
-.arrow_right {
-  cursor: pointer;
+.swiper-wrapper {
+  box-sizing: content-box;
 }
 
-.arrow_left,
-.arrow_right {
-  position: absolute;
-  width: 3rem;
-  height: 3rem;
-}
-
-.arrow_right {
-  margin-top: 14rem;
-  margin-left: 92rem;
-}
-
-.arrow_left {
-  margin-top: 14rem;
-  margin-right: 92rem;
-}
-
-.section3 .left,
-.section3 .right {
-  margin-top: 4rem;
-  width: 9rem;
-  height: 23rem;
-}
-
-.section3 .prog {
-  width: 44rem;
-  height: 1.8125rem;
-  background: #d0cce2;
-  border-radius: 2.1875rem;
-  margin-left: 37rem;
-  margin-top: 2rem;
-}
-
-.section3 .conteiner {
+.swiper-slide {
   display: flex;
-  justify-content: center;
-  margin-top: 22.5rem;
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  width: 5rem;
+  height: 5rem;
+  top: 8.5rem;
+}
+
+.swiper-button-prev {
+  left: 0rem;
+}
+
+.swiper-button-next {
+  right: 0rem;
 }
 
 /* section 4 */
@@ -369,14 +362,14 @@ header {
 
 /* section 5 */
 
- .navbar {
+.navbar {
   display: flex;
   text-align: center;
   justify-content: center;
   padding-top: 1.8rem;
 }
 
- .nav_effecti {
+.nav_effecti {
   display: flex;
   text-align: center;
   justify-content: center;
@@ -387,36 +380,36 @@ header {
   cursor: pointer;
 }
 
- .nav_effecti p {
+.nav_effecti p {
   font-weight: 400;
   font-size: 2rem;
   color: black;
   cursor: pointer;
 }
 
- .nav_effecti:first-child {
+.nav_effecti:first-child {
   border-radius: 6.3125rem 0 0 6.3125rem;
 }
 
- .nav_effecti:last-child {
+.nav_effecti:last-child {
   border-radius: 0 6.3125rem 6.3125rem 0;
 }
 
- .nav_effecti:hover {
+.nav_effecti:hover {
   transition: 1.5s;
   background: #6e7ab4;
 }
 
- .nav_effecti:hover p {
+.nav_effecti:hover p {
   transition: 1.5s;
   color: white;
 }
 
-.content{
+.content {
   display: none;
 }
 
-.content.activ{
+.content.activ {
   width: 69.9375rem;
   height: 35.5rem;
   background: #ffffff;
@@ -426,7 +419,7 @@ header {
   align-items: center;
 }
 
-.content.activ img{
+.content.activ img {
   width: 1rem;
   height: 1rem;
   width: 40rem;
@@ -448,7 +441,6 @@ header {
   height: 7.75rem;
 }
 
-
 .section5 .conteyner {
   margin-top: 2.5rem;
   display: flex;
@@ -460,6 +452,11 @@ header {
   gap: 3.125rem;
 }
 
+.slider {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
 /* section 6 */
 
 .obyed {
@@ -670,23 +667,10 @@ form {
     height: 1950px;
   }
 
-  .section3 .left,
-  .section3 .right {
-    display: none;
+  .swiper {
+    width: 20rem;
+    height: 6rem;
   }
-
-  .center {
-    width: 16.4375rem;
-    height: 11rem;
-  }
-
-  .arrow_left,
-  .arrow_right {
-    margin-top: 4rem;
-    width: 2.5rem;
-    height: 2.5rem;
-  }
-
   .section3 {
     padding-top: 1rem;
     width: 320px;
@@ -725,7 +709,7 @@ form {
     margin-top: -2.5rem;
   }
 
-  .section4 .contbox img{
+  .section4 .contbox img {
     width: 13.4375rem;
     height: 174px;
   }
