--- a/style.css
+++ b/style.css
@@ -561,18 +561,8 @@ form {
   color: #ffffff;
 }
 
-
-input:invalid:not(:placeholder-shown) {
-  border-color: red;
-}
-input:valid:not(:placeholder-shown) {
-  border-color: green;
-}
-input:invalid::before {
-  content: "Это поле обязательно для заполнения";
-  color: red;
-  display: block;
-  margin-top: 5px;
+input:invalid{
+  border: 1px solid red;
 }
 
 @media screen and (max-width: 320px) {
