--- a/style.css
+++ b/style.css
@@ -665,14 +665,83 @@ input:invalid {
     font-size: 0.9375rem;
   }
 
+  /* section 2 */
+
   .section2 {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    background: url(./mobile/mobile_section.png);
+    width: 320px;
+    height: 846px;
   }
 
+  .section2 h2 {
+    padding-top: 1rem;
+    padding-left: 0;
+  }
+
+  .elem {
+    display: grid;
+  }
+
+  .img_elem {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    row-gap: 4.5rem;
+  }
+
+  .imgItem_2 {
+    margin-left: 0;
+    margin-top: -2rem;
+  }
+
+  .imgItem_3 {
+    margin-top: -48px;
+  }
+
+  .imgItem_4 {
+    margin-top: -3rem;
+  }
+
+  .imgItem_5 {
+    margin-top: 0;
+  }
+
+  .textItem_6 {
+    margin-top: -5rem;
+  }
+
+  .text_elem span {
+    font-weight: bold;
+    font-size: 1.25rem;
+    color: #ffffff;
+  }
+  .text_elem p {
+    font-weight: 400;
+    font-size: 1.25rem;
+    color: #a8a2a2;
+  }
+
+  .text_elem {
+    margin: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    margin-top: 6rem;
+    margin-left: 1.5rem;
+    row-gap: 5.9375rem;
+  }
+
+  /* -------- */
   .background_picture {
     width: 320px;
     background: no-repeat url(./mobile/newback.png);
-    height: 1950px;
+    height: 1883px;
   }
 
   .swiper {
